# sara-ai-assistant

./: .env.example  Procfile  Simplified requirements.txt  requirements.txt  ui.py
sara-ai-assistant/: agent_sara.py  pyproject.toml  requirements.txt  server.py  ui.py
sara-ai-assistant/sara/: __init__.py  config.py
sara-ai-assistant/sara/tools/: __init__.py  applications.py  files.py  system.py  utils.py  utils.py#  web.py
sara-ai-assistant/static/: script.js  style.css
sara-ai-assistant/templates/: index.html
templates/: index.html
